--- a/src/components/Topo/Topo.module.css
+++ b/src/components/Topo/Topo.module.css
@@ -1,4 +1,5 @@
-.topo_darkMode, .topo_lightMode {
+.topo_darkMode,
+.topo_lightMode {
     width: 100%;
     min-height: 10vh;
     display: flex;
@@ -37,7 +38,11 @@
     border-color: white;
 }
 
-.logo_img{
+.topo_lightMode .btn_config {
+    background-color: white;
+}
+
+.logo_img {
     width: 50px;
     height: 35px;
 }
