--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,10 +1,11 @@
 .cards_lightMode,
 .cards_darkMode {
-    flex: 0 0 300px;
+    flex: 1 1 300px;
     min-height: 280px;
     padding: 20px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 20px;
     border: 1px solid var(--lightLinhaRodape);
 }
@@ -51,4 +52,12 @@
 
 .cards_titulos small {
     font-size: 16px;
+}
+
+/* Media Query */
+@media screen and (max-width: 768px) {
+    .cards_lightMode,
+    .cards_darkMode {
+        flex: 0 0 100%;
+    }
 }
