--- a/src/components/Rodape/Rodape.module.css
+++ b/src/components/Rodape/Rodape.module.css
@@ -57,3 +57,11 @@
     text-decoration: none;
     font-weight: 900;
 }
+
+/* Media-query */
+@media screen and (max-width: 768px) {
+    .img_icones {
+        width: 40px;
+        height: 40px;
+    }
+}
